k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soil-prediction-service
  namespace: soil-prediction-prod
  labels:
    app: nasa-soil-prediction
    env: production
spec:
  type: ClusterIP
  selector:
    app: nasa-soil-prediction
    env: production
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
